change map title in 02map

--- a/02_General_Map/general_map.html
+++ b/02_General_Map/general_map.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- Map Title -->
-    <div class="map-title">CycleScope: Your Complete Network Snapshot</div>
+    <div class="map-title">CycleScope: Your Network Snapshot</div>
 
     <!-- Map Container -->
     <div id="map"></div>
