add explanation for cycling network data

--- a/04_For_Planners/planner_map.html
+++ b/04_For_Planners/planner_map.html
@@ -84,9 +84,9 @@
             <div class="panel-option" data-option-id="option2">
                 <span class="option-circle"></span>
                 <div class="panel-option-content">
-                    <div class="panel-option-title">Road Risk Level</div>
+                    <div class="panel-option-title">Cycling Road Risk Level</div>
                     <div class="legend" id="option2-legend">
-                        <div class="legend-item explanatory">Risk levels are based on the number of casualties per unit length of road. Roads classified as Very Low had no reported cyclist casualties between 2018 and 2023.</div>
+                        <div class="legend-item explanatory">This data was calculated using the cycling network roads. Risk levels are based on the number of casualties per unit length of road. Roads classified as Very Low had no reported cyclist casualties between 2018 and 2023.</div>
                         <div class="legend-item">Very low</div>
                         <div class="legend-item">Low</div>
                         <div class="legend-item">Moderate</div>
