--- a/04_For_Planners/planner_map.html
+++ b/04_For_Planners/planner_map.html
@@ -31,7 +31,7 @@
 <body>
     <!-- Nav placeholder -->
     <div id="nav-placeholder"></div>
-    <!-- Navigation Bar avoid delay-->
+    <!-- Navigation Bar avoid delay -->
     <div class="nav-bar">
         <div class="nav-title">London CycleNet</div>
         <div class="nav-links">
@@ -56,7 +56,7 @@
     <div class="charts-stack" id="charts-stack"></div>
 
     <div class='side-panel'>
-        <!-- Explanation text section (no border) -->
+        <!-- Explanation text section -->
         <div class="explore-section">
             <div class="explore-content">
                 This map presents cyclist casualty data from 2018 to 2023 to help planners improve cycling safety. Users can choose from
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <!-- Options container (with white background) -->
+        <!-- Options container -->
         <div class="panel-options-container">
             <div class="panel-option" data-option-id="option1">
                 <span class="option-circle"></span>
@@ -111,7 +111,7 @@
         </div>
     </div>
 
-    <!-- Link to our JavaScript file -->
+    <!-- Link to our js file -->
     <script src="planner_map.js"></script>
 </body>
 
