Avoid delay in nav0bar in start here page

--- a/index.html
+++ b/index.html
@@ -166,6 +166,25 @@
   <body>
     <!-- Nav placeholder -->
     <div id="nav-placeholder"></div>
+    <!-- Navigation Bar avoid delay-->
+    <div class="nav-bar">
+      <div class="nav-title">London CycleNet</div>
+      <div class="nav-links">
+        <a href="#">Start Here</a>
+        <a href="#">Overview</a>
+        <a href="#">For Students</a>
+        <a href="#">For Planners</a>
+      </div>
+      <div class="github-icon">
+        <a
+          href="https://github.com/Aprilmiaoyilee/casa0003_group.git"
+          target="_blank"
+          ><img
+            src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
+            alt="GitHub"
+        /></a>
+      </div>
+    </div>
 
     <section class="hero">
       <h1>Welcome to London CycleNet</h1>
