Made changes to Data Table with the updated LSOA Working Day Population Data. Removed the word "purple". Edited comments.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         councils in analysing accident trends to promote safer spaces.
       </p>
 
-      <!-- Moved image before quote -->
+      <!-- Adding Cycling image before the quote -->
       <img
         src="./img/Cycling_London.jpg"
         alt="Cycling in London"
@@ -238,7 +238,7 @@
         increase over that period.
       </p>
 
-      <!-- Cycle Stages Chart -->
+      <!-- Cycle Data Chart for London - Daily Cycle Count -->
       <canvas
         id="cycleChart"
         width="1000"
@@ -302,7 +302,7 @@
       });
     </script>
 
-    <!-- Policies and Plans -->
+    <!-- Policies and Plans information added -->
     <section class="content-section" id="policies" style="margin-top: 20px">
       <h2>Policies and Plans</h2>
       <p>
@@ -370,7 +370,7 @@
       </div>
     </section>
 
-    <!-- Datasets Used -->
+    <!-- Datasets Used - table creation -->
     <section class="content-section" id="datasets">
       <h2>Datasets Used</h2>
       <table class="dataset-table">
@@ -445,12 +445,12 @@
             </td>
           </tr>
           <tr>
-            <td>LSOA Level Population</td>
+            <td>LSOA Workday Population</td>
             <td>2021</td>
             <td>
               <a
-                href="https://data.london.gov.uk/census/2021-ward-and-lsoa-estimates/"
-                >London Census 2021 Estimates</a
+                href="https://www.nomisweb.co.uk/sources/census_2021_wd"
+                >London Census 2021 Workday Population</a
               >
             </td>
           </tr>
@@ -530,7 +530,7 @@
     </section>
 
     <footer>
-      &copy; 2025 London CycleNet | Designed with purpose and purple.
+      &copy; 2025 London CycleNet | Designed with purpose.
     </footer>
   </body>
 </html>
