Change scatter plot explantion

--- a/03_Student_Map/student_map.html
+++ b/03_Student_Map/student_map.html
@@ -81,8 +81,7 @@
               <div class="panel-option-content">
                   <div class="panel-option-title"> Click here to explore London University Cycling Accessibility</div>
                   <div class="legend" id="option1-legend">
-                      <div class="legend-item">A scatter plot shows how far each university is from central
-                        London and how many tube stations are nearby by bike.</div>
+                      <div class="legend-item">A scatter plot that shows how far each university is from central London and what tube stations are nearby.</div>
                     
                   </div>
               </div>
